Fix settings alignment

--- a/webui/css/views/AlbumView.css
+++ b/webui/css/views/AlbumView.css
@@ -22,6 +22,12 @@ div#AlbumView .AlbumArtwork
     margin:         2rem;
 }
 
+#AlbumView .leftcolumn
+{
+    width:          calc(100% - var(--artworkwidth-large) - 4rem);
+    overflow-y:     auto;
+}
+
 #AlbumView .rightcolumn
 {
     width:          calc(var(--artworkwidth-large) + 4rem);
